/*
protoc --go_out=. --go_opt=paths=source_relative \
    --go-grpc_out=. --go-grpc_opt=paths=source_relative \
    grpc/cache.proto
*/

syntax = "proto3";

package cache;

service CacheHandler {
  rpc GetKey (GetKeyRequest) returns (GetKeyReply) {}
  rpc SetKey (SetKeyRequest) returns (SetKeyReply) {}
  rpc Clear (ClearRequest) returns (ClearReply) {}
  rpc Remove (RemoveKeyRequest) returns (RemoveKeyReply) {}
}

message GetKeyRequest {
  string key = 1;
}

message GetKeyReply {
  string value = 1;
}

message SetKeyRequest {
  string key = 1;
  string value = 2;
}

message SetKeyReply {}

message ClearRequest {}

message ClearReply {}

message RemoveKeyRequest {
  string key = 1;
}

message RemoveKeyReply {}
